--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Pierre Chopinet
 description: not a Web Developer from France
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars1.githubusercontent.com/u/19549598
 
 #
 # Flags below are optional
