--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ avatar: https://avatars1.githubusercontent.com/u/19549598
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: pierre.chopinet.xyz
+  email: pierre@chopinet.xyz
   facebook:
   flickr:
   github: pchopinet
@@ -34,7 +34,7 @@ footer-links:
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
-disqus: blog-pchopinet.disqus.com
+disqus: blog-pchopinet
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
 google_analytics: UA-118151527-1
