--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ footer-links:
   linkedin: pierre-chopinet
   pinterest:
   rss: rss # just type anything here for a working RSS icon
-  twitter: Neasgul
+  twitter: pchopinet
   stackoverflow: users/8433108/pierre
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
