--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,12 @@ avatar: https://avatars1.githubusercontent.com/u/19549598
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: pierre@chopinet.xyz
+  email:
   facebook:
   flickr:
   github: pchopinet
   instagram:
-  linkedin: pierre-chopinet
+  linkedin: pchopinet
   pinterest:
   rss: rss # just type anything here for a working RSS icon
   twitter: pchopinet
